// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anonymous reference 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<target ids=\\"id1\\" refuri=\\"http://www.python.org\\" anonymous=\\"1\\"></target></document>"
`;

exports[`Anonymous via .. no blankFinish 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<target ids=\\"id1\\" refuri=\\"http://www.python.org\\" anonymous=\\"1\\"></target></document>"
`;

exports[`Anonymous via two dots 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<target ids=\\"id1\\" refuri=\\"http://www.python.org\\" anonymous=\\"1\\"></target></document>"
`;

exports[`Bullet list, invalid input 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list><system_message line=\\"2\\"><paragraph>Bullet list ends without a blank line; unexpected unindent.</paragraph></system_message><paragraph>invalid</paragraph></document>"
`;

exports[`Bullet list, invalid input doctest 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list><system_message line=\\"2\\"><paragraph>Bullet list ends without a blank line; unexpected unindent.</paragraph></system_message><doctest_block>&gt;&gt;&gt; foo</doctest_block></document>"
`;

exports[`Bullet list, invalid input field marker 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list><system_message line=\\"2\\"><paragraph>Bullet list ends without a blank line; unexpected unindent.</paragraph></system_message><field_list><field><field_name>Hello</field_name><field_body><paragraph>foo</paragraph></field_body></field></field_list></document>"
`;

exports[`Bullet list, invalid input line 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list><system_message line=\\"2\\"><paragraph>Bullet list ends without a blank line; unexpected unindent.</paragraph></system_message><transition></transition></document>"
`;

exports[`Bullet no unindent 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list></document>"
`;

exports[`Citation 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph>Hello <citation_reference ids=\\"id1\\" refname=\\"goober\\">Goober</citation_reference></paragraph><citation ids=\\"goober\\" names=\\"goober\\"><label>Goober</label><paragraph>Citation.</paragraph></citation></document>"
`;

exports[`Comment 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<comment>Comments begin with two dots and a space.  Anything may
follow, except for the syntax of footnotes/citations,
hyperlink targets, directives, or substitution definitions.</comment></document>"
`;

exports[`Emphasis 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph><emphasis>hello</emphasis></paragraph></document>"
`;

exports[`Emphasis and inline 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph><emphasis>hello</emphasis> and <strong>goodbye</strong></paragraph></document>"
`;

exports[`Emphasis followed by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph><emphasis>hello</emphasis> test</paragraph></document>"
`;

exports[`Emphasis preceded by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph>stuff <emphasis>hello</emphasis></paragraph></document>"
`;

exports[`Emphasis surrounded by text 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph>stuff <emphasis>hello</emphasis> things</paragraph></document>"
`;

exports[`Excerpt 1 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph>Configuration settings:
<reference name=\\"footnote_references\\" refname=\\"footnote_references setting\\">footnote_references</reference><target names=\\"footnote_references\\" refname=\\"footnote_references setting\\"></target>.</paragraph><target ids=\\"footnote\\" names=\\"footnote\\" refuri=\\"../doctree.html#footnote\\"></target><target ids=\\"label\\" names=\\"label\\" refuri=\\"../doctree.html#label\\"></target><target ids=\\"footnote_references\\\\ setting\\" names=\\"footnote_references\\\\ setting\\" refuri=\\"../../user/config.html#footnote-references-html4css1-writer\\"></target></document>"
`;

exports[`Field list 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<field_list>
<field>
<field_name>Author</field_name><field_body><paragraph>David Goodger</paragraph></field_body></field><field><field_name>Contact</field_name><field_body><paragraph>docutils-develop@lists.sourceforge.net</paragraph></field_body></field><field><field_name>Revision</field_name><field_body><paragraph>$Revision: 8205 $</paragraph></field_body></field><field><field_name>Date</field_name><field_body><paragraph>$Date: 2017-11-27 03:07:28 -0800 (Mon, 27 Nov 2017) $</paragraph></field_body></field><field><field_name>Copyright</field_name><field_body><paragraph>This document has been placed in the public domain.</paragraph></field_body></field></field_list></document>"
`;

exports[`Footnote 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<footnote ids=\\"1\\" names=\\"1\\">
<label>1</label><paragraph>A footnote contains body elements, consistently
indented by at least 3 spaces.</paragraph></footnote></document>"
`;

exports[`Image Directive 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<comment>test</comment></document>"
`;

exports[`Inline followed by emphasis 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph><strong>hello</strong> and <emphasis>goodbye</emphasis></paragraph></document>"
`;

exports[`Inline internal targets 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet list</paragraph><target ids=\\"second\\\\ item\`\\" names=\\"second\\\\ item\`\\"></target></list_item><list_item><paragraph>second item, with hyperlink target.</paragraph></list_item></bullet_list></document>"
`;

exports[`Line block with continuation line 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<line_block>
<line>Lend us a couple of bob till Thursday.</line><line>I&apos;m absolutely skint.</line><line>But I&apos;m expecting a postal order and I can pay you back
as soon as it comes.</line><line>Love, Ewan.</line></line_block></document>"
`;

exports[`Links 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<target ids=\\"a\\\\ restructuredtext\\\\ primer\\" names=\\"a\\\\ restructuredtext\\\\ primer\\" refuri=\\"../../user/rst/quickstart.html\\"></target><target ids=\\"quick\\\\ restructuredtext\\" names=\\"quick\\\\ restructuredtext\\" refuri=\\"../../user/rst/quickref.html\\"></target></document>"
`;

exports[`Mixed bullets 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list><system_message line=\\"2\\"><paragraph>Bullet list ends without a blank line; unexpected unindent.</paragraph></system_message><bullet_list bullet=\\"+\\"><list_item><paragraph>bullet</paragraph></list_item></bullet_list></document>"
`;

exports[`Nested bullets 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item></bullet_list><block_quote><bullet_list bullet=\\"+\\"><list_item><paragraph>bullet</paragraph></list_item><list_item><paragraph>bullet</paragraph></list_item></bullet_list></block_quote><bullet_list bullet=\\"*\\"><list_item><paragraph>bullet</paragraph></list_item></bullet_list></document>"
`;

exports[`Nested sections 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<section ids=\\"title\\" names=\\"title\\">
<title>Title</title><paragraph>Section-------</paragraph><paragraph>Third@@@@@</paragraph></section><section ids=\\"second\\" names=\\"second\\"><title>Second</title><subtitle ids=\\"ooops\\" names=\\"ooops\\">Ooops</subtitle></section></document>"
`;

exports[`Paragraph ending in :: 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph>This is my paragraph ending in:</paragraph><system_message line=\\"1\\"><paragraph>Literal block expected; none found.</paragraph></system_message></document>"
`;

exports[`Random 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<bullet_list bullet=\\"*\\">
<list_item>
<paragraph>bullet</paragraph></list_item><list_item><paragraph>bullet</paragraph></list_item></bullet_list></document>"
`;

exports[`Random 2 1`] = `
"<!-- generated by Docutils 0.14js -->
<document ids=\\"header\\\\ 1\\" names=\\"header\\\\ 1\\" source=\\"&lt;string&gt;\\">
<title>Header 1</title><paragraph>Text</paragraph><section ids=\\"header\\\\ 2\\" names=\\"header\\\\ 2\\"><title>Header 2</title><system_message line=\\"6\\"><paragraph>Title underline too short.</paragraph><literal_block>Header 2
-------</literal_block></system_message></section></document>"
`;

exports[`Random 2 2`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph>Test.
Test2
Test3
-----</paragraph></document>"
`;

exports[`Random 4 1`] = `
"<!-- generated by Docutils 0.14js -->
<document ids=\\"test3\\" names=\\"test3\\" source=\\"&lt;string&gt;\\">
<title>Test3</title><paragraph>This is a test.</paragraph><bullet_list bullet=\\"*\\"><list_item><paragraph>BUllet list 1</paragraph></list_item><list_item><paragraph>The emacs rst editor is weird.</paragraph></list_item></bullet_list></document>"
`;

exports[`Random indent 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
</document>"
`;

exports[`Short overline 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<system_message line=\\"1\\">
<paragraph>Possible incomplete section title.
Treating the overline as ordinary text because it&apos;s so short.</paragraph></system_message><paragraph>===
Title
===</paragraph></document>"
`;

exports[`Short overline 2 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<system_message line=\\"1\\">
<paragraph>Possible incomplete section title.
Treating the overline as ordinary text because it&apos;s so short.</paragraph></system_message><paragraph>===
Title</paragraph></document>"
`;

exports[`Strong 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph><strong>hello</strong></paragraph></document>"
`;

exports[`Title 1`] = `
"<!-- generated by Docutils 0.14js -->
<document ids=\\"title\\" names=\\"title\\" source=\\"&lt;string&gt;\\">
<title>Title</title><paragraph>Paragraph.</paragraph></document>"
`;

exports[`Transition correction 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph>====:</paragraph><literal_block>====::</literal_block></document>"
`;

exports[`Transition marker 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<transition>
</transition></document>"
`;

exports[`block quote 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<block_quote>
<paragraph>Block quotes consist of indented body elements:</paragraph><block_quote><paragraph>This theory, that is mine, is mine.</paragraph></block_quote><attribution>Anne Elk (Miss)</attribution></block_quote></document>"
`;

exports[`bullet from spec 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<bullet_list bullet=\\"-\\">
<list_item>
<paragraph>This is a bullet list.</paragraph></list_item><list_item><paragraph>Bullets can be &quot;*&quot;, &quot;+&quot;, or &quot;-&quot;.</paragraph></list_item></bullet_list></document>"
`;

exports[`complex 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<bullet_list bullet=\\"-\\">
<list_item>
<paragraph>This is the first line of a bullet list
item&apos;s paragraph.  All lines must align
relative to the first line.  <footnote_reference ids=\\"id1\\" refname=\\"1\\">1</footnote_reference></paragraph><block_quote><paragraph>This indented paragraph is interpreted
as a block quote.</paragraph></block_quote></list_item></bullet_list><paragraph>Because it is not sufficiently indented,
this paragraph does not belong to the list
item.</paragraph><footnote ids=\\"1\\" names=\\"1\\"><label>1</label><paragraph>Here&apos;s a footnote.  The second line is aligned
with the beginning of the footnote label.  The &quot;..&quot;
marker is what determines the indentation.</paragraph></footnote></document>"
`;

exports[`definition list 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<definition_list>
<definition_list_item>
<term>what</term><definition><paragraph>Definition lists associate a term with a definition.</paragraph></definition></definition_list_item><definition_list_item><term>how</term><definition><paragraph>The term is a one-line phrase, and the definition is one
or more paragraphs or body elements, indented relative to
the term.</paragraph></definition></definition_list_item></definition_list></document>"
`;

exports[`definition list with classifier term 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<definition_list>
<definition_list_item>
<term>term</term><classifier>classifier</classifier><definition><paragraph>test</paragraph></definition></definition_list_item><definition_list_item><term>what</term><definition><paragraph>Definition lists associate a term with a definition.</paragraph></definition></definition_list_item><definition_list_item><term>how</term><definition><paragraph>The term is a one-line phrase, and the definition is one
or more paragraphs or body elements, indented relative to
the term.</paragraph></definition></definition_list_item></definition_list></document>"
`;

exports[`doctest block 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<block_quote>
<doctest_block>&gt;&gt;&gt; print &apos;Python-specific usage examples; begun with &quot;&gt;&gt;&gt;&quot;&apos;
Python-specific usage examples; begun with &quot;&gt;&gt;&gt;&quot;
&gt;&gt;&gt; print &apos;(cut and pasted from interactive Python sessions)&apos;
(cut and pasted from interactive Python sessions)</doctest_block></block_quote></document>"
`;

exports[`docutils title 1`] = `
"<!-- generated by Docutils 0.14js -->
<document ids=\\"docutils\\\\ project\\\\ documentation\\\\ overview\\" names=\\"docutils\\\\ project\\\\ documentation\\\\ overview\\" source=\\"&lt;string&gt;\\">
<title><reference name=\\"Docutils\\" refname=\\"docutils\\">Docutils</reference> Project Documentation Overview</title></document>"
`;

exports[`escaping 1 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph><emphasis>escape</emphasis> <literal>with</literal> &quot;\\\\&quot;</paragraph></document>"
`;

exports[`escaping 2 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph>\\\\<emphasis>escape</emphasis> \\\\<literal>with</literal> &quot;\\\\\\\\&quot;</paragraph></document>"
`;

exports[`footnote auto-symbol 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph>Here is a symbolic footnote reference: <footnote_reference ids=\\"id1\\" auto=\\"*\\"></footnote_reference>.</paragraph><footnote ids=\\"id2\\" auto=\\"*\\"><paragraph>This is the footnote.</paragraph></footnote></document>"
`;

exports[`footnote reference strangeness 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph>If <footnote_reference ids=\\"id1\\" auto=\\"1\\" refname=\\"note\\"></footnote_reference> is the first footnote reference, it will show up as
&quot;[1]&quot;.  We can refer to it again as <footnote_reference ids=\\"id2\\" auto=\\"1\\" refname=\\"note\\"></footnote_reference> and again see
&quot;[1]&quot;.  We can also refer to it as <reference name=\\"note\\" refname=\\"note\\">note</reference> (an ordinary internal
hyperlink reference).</paragraph><footnote ids=\\"note\\" names=\\"note\\" auto=\\"1\\"><paragraph>This is the footnote labeled &quot;note&quot;.</paragraph></footnote></document>"
`;

exports[`footnotes multiple refs 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph><footnote_reference ids=\\"id1\\" auto=\\"1\\"></footnote_reference> is a reference to footnote 1, and <footnote_reference ids=\\"id2\\" auto=\\"1\\"></footnote_reference> is a reference to
footnote 2.</paragraph><footnote ids=\\"id3\\" auto=\\"1\\"><paragraph>This is footnote 1.</paragraph></footnote><footnote ids=\\"id4\\" auto=\\"1\\"><paragraph>This is footnote 2.</paragraph></footnote><footnote ids=\\"id5\\" auto=\\"1\\"><paragraph>This is footnote 3.</paragraph></footnote><paragraph><footnote_reference ids=\\"id6\\" auto=\\"1\\"></footnote_reference> is a reference to footnote 3.</paragraph></document>"
`;

exports[`full rst2xml pipeline with specific input 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph>test</paragraph></document>"
`;

exports[`grid table 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<table>
<tgroup cols=\\"3\\">
<colspec colwidth=\\"24\\">
</colspec><colspec colwidth=\\"12\\">
</colspec><colspec colwidth=\\"10\\">
</colspec><thead>
<row>
<entry>
<paragraph>Header row, column 1</paragraph></entry><entry><paragraph>Header 2</paragraph></entry><entry><paragraph>Header 3</paragraph></entry></row></thead><tbody><row><entry><paragraph>body row 1, column 1</paragraph></entry><entry><paragraph>column 2</paragraph></entry><entry><paragraph>column 3</paragraph></entry></row><row><entry><paragraph>body row 2</paragraph></entry><entry morecols=\\"1\\"><paragraph>Cells may span</paragraph></entry></row></tbody></tgroup></table></document>"
`;

exports[`incomplete substitution definition with image 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<comment>|beep</comment></document>"
`;

exports[`interpreted text role emphasis prefix 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph><title_reference>test</title_reference></paragraph></document>"
`;

exports[`interpreted text role emphasis suffix 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph><title_reference>test</title_reference></paragraph></document>"
`;

exports[`interpreted text role prefix 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph><title_reference>test</title_reference></paragraph></document>"
`;

exports[`interpreted text role suffix 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph><title_reference>test</title_reference></paragraph></document>"
`;

exports[`interpreted text with both roles 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph><problematic ids=\\"id2\\" refid=\\"id1\\">:role:\`test\`:role:</problematic></paragraph><system_message ids=\\"id1\\" backrefs=\\"id2\\" line=\\"1\\"><paragraph>Multiple roles in interpreted text (both prefix and suffix present; only one allowed).</paragraph></system_message></document>"
`;

exports[`interpreted text with no end string suffix 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph><problematic ids=\\"id2\\" refid=\\"id1\\">\`</problematic>test</paragraph><system_message ids=\\"id1\\" backrefs=\\"id2\\" line=\\"1\\"><paragraph>Inline interpreted text or phrase reference start-string without end-string.</paragraph></system_message></document>"
`;

exports[`interpreted text with no role 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph><problematic ids=\\"id2\\" refid=\\"id1\\">\`test\`</problematic></paragraph><system_message ids=\\"id1\\" backrefs=\\"id2\\" line=\\"1\\"><paragraph>Unknown interpreted text role &quot;&quot;.</paragraph></system_message></document>"
`;

exports[`literal block 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<block_quote>
<paragraph>Literal blocks are either indented or line-prefix-quoted blocks,
and indicated with a double-colon (&quot;::&quot;) at the end of the
preceding paragraph (right here --&gt;):</paragraph><literal_block>if literal_block:
    text = &apos;is left as-is&apos;
    spaces_and_linebreaks = &apos;are preserved&apos;
    markup_processing = None</literal_block></block_quote></document>"
`;

exports[`literal block without blank finish 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<block_quote>
<paragraph>Literal blocks are either indented or line-prefix-quoted blocks,
and indicated with a double-colon (&quot;::&quot;) at the end of the
preceding paragraph (right here --&gt;):</paragraph><literal_block>if literal_block:
    text = &apos;is left as-is&apos;
    spaces_and_linebreaks = &apos;are preserved&apos;
    markup_processing = None</literal_block></block_quote></document>"
`;

exports[`more complex grid table 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<table>
<tgroup cols=\\"4\\">
<colspec colwidth=\\"24\\">
</colspec><colspec colwidth=\\"12\\">
</colspec><colspec colwidth=\\"10\\">
</colspec><colspec colwidth=\\"10\\">
</colspec><thead>
<row>
<entry>
<paragraph>Header row, column 1
(header rows optional)</paragraph></entry><entry><paragraph>Header 2</paragraph></entry><entry><paragraph>Header 3</paragraph></entry><entry><paragraph>Header 4</paragraph></entry></row></thead><tbody><row><entry><paragraph>body row 1, column 1</paragraph></entry><entry><paragraph>column 2</paragraph></entry><entry><paragraph>column 3</paragraph></entry><entry><paragraph>column 4</paragraph></entry></row><row><entry><paragraph>body row 2</paragraph></entry><entry morecols=\\"2\\"><paragraph>Cells may span columns.</paragraph></entry></row><row><entry><paragraph>body row 3</paragraph></entry><entry morerows=\\"1\\"><paragraph>Cells may
span rows.</paragraph></entry><entry morerows=\\"1\\" morecols=\\"1\\"><bullet_list bullet=\\"-\\"><list_item><paragraph>Table cells</paragraph></list_item><list_item><paragraph>contain</paragraph></list_item><list_item><paragraph>body elements.</paragraph></list_item></bullet_list></entry></row><row><entry><paragraph>body row 4</paragraph></entry></row></tbody></tgroup></table></document>"
`;

exports[`multilevel blockquote 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph>This is a top-level paragraph.</paragraph><block_quote><paragraph>This paragraph belongs to a first-level block quote.</paragraph><block_quote><paragraph>This paragraph belongs to a second-level block quote.</paragraph></block_quote></block_quote><paragraph>Another top-level paragraph.</paragraph><block_quote><block_quote><paragraph>This paragraph belongs to a second-level block quote.</paragraph></block_quote><paragraph>This paragraph belongs to a first-level block quote.  The
second-level block quote above is inside this first-level
block quote.</paragraph></block_quote></document>"
`;

exports[`option list 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<block_quote>
<option_list>
<option_list_item>
<option_group>
<option>
<option_string>-a</option_string></option></option_group><description><paragraph>command-line option &quot;a&quot;</paragraph></description></option_list_item><option_list_item><option_group><option><option_string>-b</option_string><option_argument delimiter=\\"\\"> file</option_argument></option></option_group><description><paragraph>options can have arguments
and long descriptions</paragraph></description></option_list_item><option_list_item><option_group><option><option_string>--long</option_string></option></option_group><description><paragraph>options can be long also</paragraph></description></option_list_item><option_list_item><option_group><option><option_string>--input</option_string><option_argument delimiter=\\"=\\">file</option_argument></option></option_group><description><paragraph>long options can also have
arguments</paragraph></description></option_list_item><option_list_item><option_group><option><option_string>/V</option_string></option></option_group><description><paragraph>DOS/VMS-style options too</paragraph></description></option_list_item></option_list></block_quote></document>"
`;

exports[`program lang 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph>Want to learn about <reference name=\\"my favorite programming language\\" refname=\\"my favorite programming language\\">my favorite programming language</reference>?</paragraph><target ids=\\"my\\\\ favorite\\\\ programming\\\\ language\\" names=\\"my\\\\ favorite\\\\ programming\\\\ language\\" refuri=\\"http://www.python.org\\"></target></document>"
`;

exports[`simple table 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<block_quote>
<table>
<tgroup cols=\\"3\\">
<colspec colwidth=\\"20\\">
</colspec><colspec colwidth=\\"10\\">
</colspec><colspec colwidth=\\"10\\">
</colspec><thead>
<row>
<entry>
<paragraph>Header row, column 1</paragraph></entry></row></thead><tbody><row><entry><paragraph>body row 1, column 1</paragraph></entry></row><row><entry><paragraph>body row 2</paragraph></entry></row></tbody></tgroup></table></block_quote></document>"
`;

exports[`simple table from policies.txt 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<block_quote>
<table>
<tgroup cols=\\"3\\">
<colspec colwidth=\\"13\\">
</colspec><colspec colwidth=\\"7\\">
</colspec><colspec colwidth=\\"44\\">
</colspec><thead>
<row>
<entry>
<paragraph>Release Level</paragraph></entry></row></thead><tbody><row><entry><paragraph>alpha</paragraph></entry></row><row><entry><paragraph>beta</paragraph></entry></row><row><entry><paragraph>candidate</paragraph></entry></row><row><entry><paragraph>final</paragraph></entry></row></tbody></tgroup></table></block_quote></document>"
`;

exports[`substitution definition with image 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<system_message line=\\"1\\">
<paragraph>Using English fallback for directive image</paragraph></system_message><substitution_definition names=\\"symbol\\\\ here\\"><comment>test</comment></substitution_definition></document>"
`;

exports[`tabs 1`] = `
"<!-- generated by Docutils 0.14js -->
<document source=\\"&lt;string&gt;\\">
<paragraph>hello   tabs</paragraph></document>"
`;
